<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>ru.javabegin</groupId>
	<artifactId>training</artifactId>
	<name>spring-webflow</name>
	<packaging>war</packaging>
	<version>1.0.0-BUILD-SNAPSHOT</version>

	<properties>
		<maven.compiler.target>1.8</maven.compiler.target>
		<maven.compiler.source>1.8</maven.compiler.source>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<org.springframework-version>4.0.5.RELEASE</org.springframework-version>
		<org.slf4j-version>1.7.7</org.slf4j-version>
		<org.springframework.webflow-version>2.4.0.RELEASE</org.springframework.webflow-version>
	</properties>

	<dependencies>

		<!-- Make sure that you have that dependency in your local repo -->
		<dependency>
			<artifactId>shared</artifactId>
			<groupId>com.rednavis</groupId>
			<version>1.0-SNAPSHOT</version>
			<type>jar</type>
		</dependency>

    <!-- original dependencies -->
		<dependency>
			<groupId>org.springframework.webflow</groupId>
			<artifactId>spring-webflow</artifactId>
			<version>${org.springframework.webflow-version}</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>${org.slf4j-version}</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>jcl-over-slf4j</artifactId>
			<version>${org.slf4j-version}</version>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-log4j12</artifactId>
			<version>${org.slf4j-version}</version>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.webflow</groupId>
			<artifactId>spring-js</artifactId>
			<version>2.4.8.RELEASE</version>
		</dependency>
		<dependency>
			<groupId>com.itextpdf</groupId>
			<artifactId>itextpdf</artifactId>
			<version>5.0.6</version>
		</dependency>
		<dependency>
			<groupId>javax</groupId>
			<artifactId>javaee-api</artifactId>
			<version>8.0.1</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.wildfly</groupId>
			<artifactId>wildfly-client-all</artifactId>
			<version>18.0.1.Final</version>
		</dependency>
	</dependencies>

	<build>
		<defaultGoal>package tomee:run</defaultGoal>
		<finalName>spring-webflow-demo</finalName>
		<plugins>
			<plugin>
				<groupId>org.apache.tomee.maven</groupId>
				<artifactId>tomee-maven-plugin</artifactId>
				<version>8.0.1</version>
				<configuration>
					<tomeeHttpPort>8081</tomeeHttpPort>
					<tomeeAjpPort>8010</tomeeAjpPort>
					<tomeeShutdownPort>8006</tomeeShutdownPort>
					<context>spring-mvc-webflow</context>
					<reloadOnUpdate>true</reloadOnUpdate>
					<tomeeClassifier>plume</tomeeClassifier>
					<synchronization>
						<extensions>
							<extension>.class</extension>
						</extensions>
					</synchronization>
					<args>-Xmx2048m -XX:PermSize=256m -Dtomee.serialization.class.blacklist=- -Dtomee.serialization.class.whitelist=*</args>
					<removeDefaultWebapps>true</removeDefaultWebapps>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-war-plugin</artifactId>
				<version>3.2.3</version>
				<configuration>
					<failOnMissingWebXml>false</failOnMissingWebXml>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-framework-bom</artifactId>
				<version>${org.springframework-version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>
</project>
